# targil_1

./: CMakeLists.txt  README.md  distances.cpp  euclidean .cpp  lynnbranch  manhattan.cpp  new file  targil_1
project/: Client.cpp  Client.h  KNN  KNN.cpp  KNN.h  Server.cpp  Server.h  distances  distances.cpp  distances.h  knnClass  knnClass.cpp  knnClass.h  makefile  pair.cpp  pair.h  server.cpp  server.h
project/datasets/: Client.cpp  penguins_classified.csv
targil_2/: KNN  KNN.cpp  knnClass
